Adição da funcionalidade do carrossel na main Experiência na Sobre
Obs 1: Falta fazer funcionar para telas menores.

--- a/style/sobre.css
+++ b/style/sobre.css
@@ -92,6 +92,7 @@ div#Experiencia section{
     display: flex;
     flex-direction: column;
     gap: 40px;
+    scroll-behavior: smooth;
 }
 
 /* Card Experiência + Certificados - Container */
