Adição da funcionalidade do carrossel na main Certificados na Sobre
- Precisei alterar o nome de variáveis e da funções para diferenciar quais são referentes a "Experiência" e quais são referentes a "Certificados e Formação";
- Separei em arquivos js as funcionalidades existentes na Sobre, um arquivo para o Carrossel e o outro para tratar da Linha Vertical.

Obs 1: Falta fazer funcionar para telas menores.

--- a/style/sobre.css
+++ b/style/sobre.css
@@ -949,6 +949,7 @@ div.carrosselBotoes i.carrosselSetas:nth-child(3):hover{
         width: 450px;
         flex-direction: row;
         overflow: hidden;
+        scroll-behavior: smooth;
     }
 
     /* Card Certificados - Icon e Linha vertical + Card */
